--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,6 @@
 	<link rel="stylesheet" href="../resources/css/ui-default.css">
 	<link rel="stylesheet" href="../resources/css/ui-plugins.css">
 	<link rel="stylesheet" href="../resources/css/ui-guide.css">
-
-	<script src="../resources/js/ui-script.js"></script>
 	<!-- //ui source -->
 </head>
 
@@ -221,6 +219,15 @@
 						<td></td>
 						<td>Privacy</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_privacy</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Select</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_select</a></td>
 						<td></td>
 					</tr>
 
@@ -606,7 +613,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU040000</a></td>
 						<td></td>
 					</tr>
-                    
+
 				</tbody>
 
 
