--- a/html/plugins/highlight.html
+++ b/html/plugins/highlight.html
@@ -44,6 +44,9 @@ sv
 	<!-- apexcharts -->
 	<link rel="stylesheet" type="text/css" href="../../resources/plugins/apexcharts/3.50.0/apexcharts.css">
 	<script src="../../resources/plugins/apexcharts/3.50.0/apexcharts.min.js"></script>
+	<!-- AOS -->
+	<link rel="stylesheet" type="text/css" href="../../resources/plugins/aos/3.0.0-beta.6/aos.css" />
+	<script src="../../resources/plugins/aos/3.0.0-beta.6/aos.js"></script>
 	<!-- //[plugins] -->
 
 	<!-- ui source -->
